--- a/novacas2021.html
+++ b/novacas2021.html
@@ -70,7 +70,15 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/novacas2021.zip" class="btn btn-secondary">Download all spectra as *.zip file (10.7 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-danger mb-3">
+<div class="card-body">
+<h5 class="card-title">Nova in outburst</h5>
+<p class="card-text"><p class="card-text">Plateau after the flare. H alpha line at R > 8000 on the request of PAD & Dr. Vladimir Zekovic.</p>
+</div>
+</div>
+<br>
+
+<a href="archives/novacas2021.zip" class="btn btn-secondary">Download all spectra as *.zip file (10.7 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
