--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 54
 </p><p class="card-text">Number of spectra: 2728
-</p><p class="card-text">Last update: 2021-06-03, 13:53</p>
+</p><p class="card-text">Last update: 2021-06-03, 14:01</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -84,7 +84,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text" style="margin-bottom:2.358cm;">Novae outbursts: </p>
+<p class="card-text" style="margin-bottom:2.358cm;">Novae in outburst: CN Cha (SyN), Nova Cas 2021</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
