--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text"></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 54
-</p><p class="card-text">Number of spectra: 2739
-</p><p class="card-text">Last update: 2021-06-10, 17:46</p>
+<p class="card-text">Number of stars: 55
+</p><p class="card-text">Number of spectra: 2746
+</p><p class="card-text">Last update: 2021-06-13, 07:29</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -165,10 +165,10 @@
       <td>+61 11 14.8</td>
       <td>V1405 Cas</td>
       <td></td>
-      <td>171</td>
+      <td>176</td>
       <td>2021-03-19</td>
-      <td>2021-06-08</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2021-06-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
       <td><a href="novacen2013.html">Nova Cen 2013</a></td>
@@ -708,6 +708,17 @@
       <td>-</td>
       <td>-</td>
       <td>-</td>
+    </tr>
+    <tr>
+      <td><a href="novaher2021.html">Nova Her 2021</a></td>
+      <td>18 57 30.95</td>
+      <td>+16 53 39.6</td>
+      <td></td>
+      <td>TCP J18573095+1653396</td>
+      <td>2</td>
+      <td>2021-06-12</td>
+      <td>2021-06-13</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
