Update novae list

--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 55
 </p><p class="card-text">Number of spectra: 2773
-</p><p class="card-text">Last update: 2021-06-15, 07:16</p>
+</p><p class="card-text">Last update: 2021-06-15, 07:44</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -328,7 +328,7 @@
       <td><a href="novamus2018.html">Nova Mus 2018</a></td>
       <td>11 26 15.16</td>
       <td>-65 31 23.3</td>
-      <td>None</td>
+      <td>V357 Mus</td>
       <td>PNV J17381927-3725077</td>
       <td>5</td>
       <td>2018-01-16</td>
@@ -427,7 +427,7 @@
       <td><a href="novasco2016.html">Nova Sco 2016</a></td>
       <td>17 38 19.27</td>
       <td>-37 25 07.7</td>
-      <td>None</td>
+      <td>V1655 Sco</td>
       <td>ASASSN-17nj</td>
       <td>19</td>
       <td>2016-06-13</td>
@@ -614,7 +614,7 @@
       <td><a href="novasgr2021a.html">Nova Sgr 2021a</a></td>
       <td>18 49 05.22</td>
       <td>-19 02 05.4</td>
-      <td></td>
+      <td>V6594 Sgr</td>
       <td>TCP J00114297+6611190</td>
       <td>8</td>
       <td>2021-03-28</td>
@@ -625,7 +625,7 @@
       <td><a href="novasgr2021b.html">Nova Sgr 2021b</a></td>
       <td>17 58 16.70</td>
       <td>-29 14 49.0</td>
-      <td></td>
+      <td>V6595 Sgr</td>
       <td>PNV J17545999-2122401</td>
       <td>6</td>
       <td>2021-04-09</td>
