--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 55
 </p><p class="card-text">Number of spectra: 2779
-</p><p class="card-text">Last update: 2021-06-15, 16:44</p>
+</p><p class="card-text">Last update: 2021-06-16, 07:43</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -131,7 +131,7 @@
       <td>19 21 50.12</td>
       <td>+15 09 24.8</td>
       <td>V1831 Aql</td>
-      <td></td>
+      <td>ASASSN-15qd</td>
       <td>1</td>
       <td>2015-10-11</td>
       <td>2015-10-11</td>
@@ -142,7 +142,7 @@
       <td>10 36 13.71</td>
       <td>-59 35 55.1</td>
       <td>V906 Car</td>
-      <td></td>
+      <td>ASASSN-18fv</td>
       <td>26</td>
       <td>2018-03-21</td>
       <td>2018-05-19</td>
@@ -153,7 +153,7 @@
       <td>00 11 42.97</td>
       <td>+66 11 19.0</td>
       <td>V1391 Cas</td>
-      <td></td>
+      <td>TCP J00114297+6611190</td>
       <td>191</td>
       <td>2020-07-30</td>
       <td>2020-12-13</td>
@@ -164,7 +164,7 @@
       <td>23 24 47.73</td>
       <td>+61 11 14.8</td>
       <td>V1405 Cas</td>
-      <td></td>
+      <td>PNV J23244760+6111140</td>
       <td>183</td>
       <td>2021-03-19</td>
       <td>2021-06-13</td>
@@ -175,7 +175,7 @@
       <td>13 54 45.36</td>
       <td>-59 09 04.2</td>
       <td>V1369 Cen</td>
-      <td>PNV J06393874+553520</td>
+      <td>PNV J13544700-5909080</td>
       <td>108</td>
       <td>2013-12-06</td>
       <td>2021-04-03</td>
@@ -183,10 +183,10 @@
     </tr>
     <tr>
       <td><a href="novacen2017.html">Nova Cen 2017</a></td>
-      <td>18 31 45.92</td>
-      <td>-63 42 18.5</td>
+      <td>13 20 55.35</td>
+      <td>-63 42 19.1</td>
       <td>V1405 Cen</td>
-      <td>PNV J23080471+6046521</td>
+      <td>ASASSN-17gk</td>
       <td>24</td>
       <td>2017-05-18</td>
       <td>2017-08-24</td>
@@ -197,7 +197,7 @@
       <td>23 08 04.71</td>
       <td>+60 46 52.1</td>
       <td>V809 Cep</td>
-      <td>OGLE-2011-BLG-1444</td>
+      <td>PNV J23080471+6046521</td>
       <td>11</td>
       <td>2013-02-03</td>
       <td>2013-02-15</td>
@@ -208,7 +208,7 @@
       <td>20 54 23.86</td>
       <td>+60 17 07.7</td>
       <td>V962 Cep</td>
-      <td>PNV J20233073+2046041</td>
+      <td>TCP J20542386+6017077</td>
       <td>15</td>
       <td>2014-03-11</td>
       <td>2014-05-23</td>
@@ -219,7 +219,7 @@
       <td>13 53 27.60</td>
       <td>-67 25 00.7</td>
       <td>FM Cir</td>
-      <td>PNV J13544700-5909080</td>
+      <td>PNV J13532700-6725110</td>
       <td>6</td>
       <td>2018-02-07</td>
       <td>2018-05-06</td>
@@ -230,7 +230,7 @@
       <td>07 13 45.84</td>
       <td>-21 12 31.3</td>
       <td>V435 CMa</td>
-      <td>PNV J18250860-2236024</td>
+      <td>TCP J07134590-2112330</td>
       <td>12</td>
       <td>2018-03-27</td>
       <td>2018-04-13</td>
@@ -241,7 +241,7 @@
       <td>20 21 42.34</td>
       <td>+31 03 29.6</td>
       <td>V2659 Cyg</td>
-      <td>TCP J20542386+6017077</td>
+      <td>PNV J20214234+3103296</td>
       <td>194</td>
       <td>2014-04-03</td>
       <td>2015-07-09</td>
@@ -252,7 +252,7 @@
       <td>21 09 26.00</td>
       <td>+48 10 51.9</td>
       <td>V2891 Cyg</td>
-      <td>PNV J20214234+3103296</td>
+      <td>PGIR19brv</td>
       <td>5</td>
       <td>2019-10-12</td>
       <td>2019-11-03</td>
@@ -263,7 +263,7 @@
       <td>20 23 30.68</td>
       <td>+20 46 03.8</td>
       <td>V339 Del</td>
-      <td>PNV J17032620-3504140</td>
+      <td>PNV J20233073+2046041</td>
       <td>1017</td>
       <td>2012-08-19</td>
       <td>2015-08-17</td>
@@ -296,7 +296,7 @@
       <td>15 29 01.82</td>
       <td>-44 49 40.9</td>
       <td>V407 Lup</td>
-      <td>PNV J17291350-1846120</td>
+      <td>PNV J15290182-4449409</td>
       <td>3</td>
       <td>2016-09-24</td>
       <td>2016-10-11</td>
@@ -307,7 +307,7 @@
       <td>15 38 43.84</td>
       <td>-47 44 41.1</td>
       <td>V408 Lup</td>
-      <td>PNV J18033275-2816054</td>
+      <td>PNV J15384000-4744500</td>
       <td>7</td>
       <td>2018-06-29</td>
       <td>2018-09-06</td>
@@ -318,7 +318,7 @@
       <td>06 39 38.74</td>
       <td>+05 53 52.0</td>
       <td>V959 Mon</td>
-      <td>ASASSN -15qd</td>
+      <td>PNV J06393874+0553520</td>
       <td>59</td>
       <td>2012-08-14</td>
       <td>2013-05-06</td>
@@ -329,7 +329,7 @@
       <td>11 26 15.16</td>
       <td>-65 31 23.3</td>
       <td>V357 Mus</td>
-      <td>PNV J17381927-3725077</td>
+      <td>PNV J11261220-6531086</td>
       <td>5</td>
       <td>2018-01-16</td>
       <td>2018-02-07</td>
@@ -340,7 +340,7 @@
       <td>17 29 13.50</td>
       <td>-18 46 12.0</td>
       <td>V2944 Oph</td>
-      <td>ASASSN -16ig</td>
+      <td>PNV J17291350-1846120</td>
       <td>26</td>
       <td>2015-04-07</td>
       <td>2015-08-06</td>
@@ -351,18 +351,18 @@
       <td>17 18 45.04</td>
       <td>-24 54 22.1</td>
       <td>V3663 Oph</td>
-      <td>ASASSN -16kd</td>
+      <td>PNV J17184490-2454220</td>
       <td>1</td>
       <td>2017-11-14</td>
       <td>2017-11-14</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2017-11-14 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td><a href="novaoph2018.html">Nova Oph 2018</a></td>
+      <td><a href="novaoph2018.html">Nova Oph 2018c</a></td>
       <td>17 42 24.10</td>
       <td>-20 53 08.8</td>
       <td>V3666 Oph</td>
-      <td>ASASSN -16kt</td>
+      <td>PNV J17422408-2053088</td>
       <td>18</td>
       <td>2018-07-13</td>
       <td>2018-09-11</td>
@@ -372,7 +372,7 @@
       <td><a href="novaori2019.html">Nova Ori 2019</a></td>
       <td>06 09 57.40</td>
       <td>+12 12 25.5</td>
-      <td>None</td>
+      <td>V2860 Ori</td>
       <td>TCP J18102829-2729590</td>
       <td>3</td>
       <td>2019-08-30</td>
@@ -384,7 +384,7 @@
       <td>04 43 21.40</td>
       <td>+47 21 25.9</td>
       <td>V392 Per</td>
-      <td>PNV J18205200-2822100</td>
+      <td>TCP J04432130+4721280</td>
       <td>59</td>
       <td>2018-04-29</td>
       <td>2019-10-31</td>
@@ -395,7 +395,7 @@
       <td>04 29 18.80</td>
       <td>+43 54 23.2</td>
       <td>V1112 Per</td>
-      <td>ASASSN-17gk</td>
+      <td>TCP J04291884+4354232</td>
       <td>283</td>
       <td>2020-11-26</td>
       <td>2021-05-01</td>
@@ -403,10 +403,10 @@
     </tr>
     <tr>
       <td><a href="novasco2013.html">Nova Sco 2013</a></td>
-      <td>17 50 19.27</td>
-      <td>-33 39 07.3</td>
+      <td>17 33 59.45</td>
+      <td>-36 06 21.1</td>
       <td>1533 Sco</td>
-      <td>ASASSN -17hx</td>
+      <td>PNV J17335943-3606216</td>
       <td>19</td>
       <td>2013-07-21</td>
       <td>2021-03-26</td>
@@ -416,8 +416,8 @@
       <td><a href="novasco2015.html">Nova Sco 2015</a></td>
       <td>17 03 26.17</td>
       <td>-35 04 17.8</td>
-      <td>V1335 Sco</td>
-      <td>ASASSN -17mt</td>
+      <td>V1535 Sco</td>
+      <td>PNV J17032620-3504140</td>
       <td>2</td>
       <td>2015-02-19</td>
       <td>2015-02-28</td>
@@ -428,7 +428,7 @@
       <td>17 38 19.27</td>
       <td>-37 25 07.7</td>
       <td>V1655 Sco</td>
-      <td>ASASSN-17nj</td>
+      <td>PNV J17381927-3725077</td>
       <td>19</td>
       <td>2016-06-13</td>
       <td>2016-10-21</td>
@@ -439,7 +439,7 @@
       <td>17 22 51.43</td>
       <td>-31 58 36.3</td>
       <td>V1656 Sco</td>
-      <td>PNV J17184504-2454221</td>
+      <td>PNV J17225112-3158349</td>
       <td>2</td>
       <td>2016-09-08</td>
       <td>2016-09-08</td>
@@ -450,7 +450,7 @@
       <td>17 30 34.18</td>
       <td>-31 06 06.8</td>
       <td>V1660 Sco</td>
-      <td>PNV J11261220-6531086</td>
+      <td>ASASSN-17nj</td>
       <td>4</td>
       <td>2017-10-18</td>
       <td>2017-10-22</td>
@@ -461,7 +461,7 @@
       <td>17 09 08.10</td>
       <td>-37 30 40.9</td>
       <td>V1710 Sco</td>
-      <td>PNV J13532700-6725110</td>
+      <td>PNV J17091000-3730500</td>
       <td>4</td>
       <td>2021-04-24</td>
       <td>2021-05-31</td>
@@ -472,7 +472,7 @@
       <td>18 43 45.57</td>
       <td>-07 36 42.0</td>
       <td>V496 Sct</td>
-      <td>ASSASN-18fv</td>
+      <td></td>
       <td>0</td>
       <td>-</td>
       <td>-</td>
@@ -482,8 +482,8 @@
       <td><a href="novasct2017.html">Nova Sct 2017</a></td>
       <td>18 31 45.90</td>
       <td>-14 18 55.6</td>
-      <td>None</td>
-      <td>TCP J07134590-2112330</td>
+      <td>V612 Sct</td>
+      <td>ASASSN-17hx</td>
       <td>139</td>
       <td>2017-07-06</td>
       <td>2018-07-17</td>
@@ -494,7 +494,7 @@
       <td>18 29 22.90</td>
       <td>-14 30 46.6</td>
       <td>V613 Sct</td>
-      <td>TCP J04432130+4721280</td>
+      <td>TCP J18292290-1430460</td>
       <td>56</td>
       <td>2018-06-30</td>
       <td>2018-07-31</td>
@@ -505,7 +505,7 @@
       <td>18 39 59.80</td>
       <td>-10 25 41.9</td>
       <td>V659 Sct</td>
-      <td>PNV J15384000-4744500</td>
+      <td>TCP J18395972-1025415</td>
       <td>8</td>
       <td>2019-10-29</td>
       <td>2019-11-18</td>
@@ -516,7 +516,7 @@
       <td>18 25 08.60</td>
       <td>-22 36 02.4</td>
       <td>V5666 Sgr</td>
-      <td>TCP J18292290-1430460</td>
+      <td>PNV J18250860-2236024</td>
       <td>2</td>
       <td>2014-03-02</td>
       <td>2014-03-08</td>
@@ -527,7 +527,7 @@
       <td>18 14 25.15</td>
       <td>-25 54 34.7</td>
       <td>V5667 Sgr</td>
-      <td>PNV J17422408-2053088</td>
+      <td>PNV J18142514-2554343</td>
       <td>1</td>
       <td>2015-02-28</td>
       <td>2015-02-28</td>
@@ -535,10 +535,10 @@
     </tr>
     <tr>
       <td><a href="novasgr2015b.html">Nova Sgr 2015b</a></td>
-      <td>18 37 39.90</td>
-      <td>-29 04 03.0</td>
+      <td>18 36 56.84</td>
+      <td>-28 55 39.8</td>
       <td>V5668 Sgr</td>
-      <td>ASASSN-19qv</td>
+      <td>PNV J18365700-2855420</td>
       <td>56</td>
       <td>2015-03-16</td>
       <td>2015-08-06</td>
@@ -549,7 +549,7 @@
       <td>18 03 32.75</td>
       <td>-28 16 05.4</td>
       <td>V5669 Sgr</td>
-      <td></td>
+      <td>PNV J18033275-2816054</td>
       <td>6</td>
       <td>2015-09-29</td>
       <td>2015-10-07</td>
@@ -560,7 +560,7 @@
       <td>18 01 07.74</td>
       <td>-26 31 42.0</td>
       <td>V5853 Sgr</td>
-      <td>PNV J06095740+1212255</td>
+      <td>TCP J18102829-2729590</td>
       <td>12</td>
       <td>2016-08-12</td>
       <td>2016-10-21</td>
@@ -582,7 +582,7 @@
       <td>18 20 52.12</td>
       <td>-28 22 13.5</td>
       <td>V5856 Sgr</td>
-      <td>TCP J18395972-1025415</td>
+      <td>PNV J18205200-2822100</td>
       <td>8</td>
       <td>2016-10-27</td>
       <td>2016-11-18</td>
@@ -593,7 +593,7 @@
       <td>17 58 08.48</td>
       <td>-30 05 37.6</td>
       <td>V6568 Sgr</td>
-      <td>AT2019uni</td>
+      <td>PNV J17580848-3005376</td>
       <td>6</td>
       <td>2020-07-19</td>
       <td>2020-07-29</td>
@@ -604,7 +604,7 @@
       <td>17 55 00.00</td>
       <td>-21 22 40.1</td>
       <td>V6593 Sgr</td>
-      <td>PNV J17580848-3005376</td>
+      <td>PNV J17545999-2122401</td>
       <td>9</td>
       <td>2020-10-06</td>
       <td>2020-10-22</td>
@@ -615,7 +615,7 @@
       <td>18 49 05.22</td>
       <td>-19 02 05.4</td>
       <td>V6594 Sgr</td>
-      <td>TCP J00114297+6611190</td>
+      <td>ASASSN-21eh</td>
       <td>8</td>
       <td>2021-03-28</td>
       <td>2021-05-04</td>
@@ -626,7 +626,7 @@
       <td>17 58 16.70</td>
       <td>-29 14 49.0</td>
       <td>V6595 Sgr</td>
-      <td>PNV J17545999-2122401</td>
+      <td>PNV J17581670-2914490</td>
       <td>6</td>
       <td>2021-04-09</td>
       <td>2021-06-02</td>
@@ -659,7 +659,7 @@
       <td>08 50 29.62</td>
       <td>-47 45 28.3</td>
       <td>V549 Vel</td>
-      <td></td>
+      <td>ASASSN-17mt</td>
       <td>2</td>
       <td>2017-09-28</td>
       <td>2017-10-08</td>
@@ -681,7 +681,7 @@
       <td>18 30 43.29</td>
       <td>-24 01 08.9</td>
       <td>V3890 Sgr</td>
-      <td>TCP J18490521-1902054</td>
+      <td></td>
       <td>57</td>
       <td>2019-08-28</td>
       <td>2019-09-28</td>
@@ -713,7 +713,7 @@
       <td><a href="novaher2021.html">Nova Her 2021</a></td>
       <td>18 57 30.95</td>
       <td>+16 53 39.6</td>
-      <td></td>
+      <td>V1674 Her</td>
       <td>TCP J18573095+1653396</td>
       <td>28</td>
       <td>2021-06-12</td>
