--- a/novae.html
+++ b/novae.html
@@ -70,8 +70,8 @@
  <p class="card-text"></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 55
-</p><p class="card-text">Number of spectra: 2790
-</p><p class="card-text">Last update: 2021-06-16, 16:25</p>
+</p><p class="card-text">Number of spectra: 2792
+</p><p class="card-text">Last update: 2021-06-17, 08:24</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -274,7 +274,7 @@
       <td>04 47 54.21</td>
       <td>-10 10 43.1</td>
       <td>KT Eri</td>
-      <td>PNV J18142514-2554343</td>
+      <td></td>
       <td>0</td>
       <td>-</td>
       <td>-</td>
@@ -285,7 +285,7 @@
       <td>05 14 53.60</td>
       <td>-70 09 48.0</td>
       <td></td>
-      <td>PNV J18365700-2855420</td>
+      <td>PNVJ05145365-700948</td>
       <td>2</td>
       <td>2019-11-13</td>
       <td>2019-11-15</td>
@@ -351,7 +351,7 @@
       <td>17 18 45.04</td>
       <td>-24 54 22.1</td>
       <td>V3663 Oph</td>
-      <td>PNV J17184490-2454220</td>
+      <td>PNV J17184504-2454221</td>
       <td>1</td>
       <td>2017-11-14</td>
       <td>2017-11-14</td>
@@ -373,7 +373,7 @@
       <td>06 09 57.40</td>
       <td>+12 12 25.5</td>
       <td>V2860 Ori</td>
-      <td>TCP J18102829-2729590</td>
+      <td>PNV J06095740+1212255</td>
       <td>3</td>
       <td>2019-08-30</td>
       <td>2019-09-01</td>
@@ -715,10 +715,10 @@
       <td>+16 53 39.6</td>
       <td>V1674 Her</td>
       <td>TCP J18573095+1653396</td>
-      <td>36</td>
+      <td>38</td>
       <td>2021-06-12</td>
-      <td>2021-06-15</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2021-06-16</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
