--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 55
 </p><p class="card-text">Number of spectra: 2808
-</p><p class="card-text">Last update: 2021-06-20, 09:04</p>
+</p><p class="card-text">Last update: 2021-06-20, 09:23</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -637,7 +637,7 @@
       <td>01 04 30.19</td>
       <td>-73 46 22.7</td>
       <td></td>
-      <td>ASASSN-20ni</td>
+      <td>ASASSN-19qv</td>
       <td>9</td>
       <td>2019-07-09</td>
       <td>2019-08-03</td>
@@ -648,7 +648,7 @@
       <td>00 48 45.00</td>
       <td>-72 53 53.8</td>
       <td></td>
-      <td>TCP J04291884+4354232</td>
+      <td>AT 2020eyq</td>
       <td>6</td>
       <td>2020-11-02</td>
       <td>2020-12-08</td>
@@ -670,7 +670,7 @@
       <td>09 04 41.51</td>
       <td>-32 22 47.5</td>
       <td>T Pyx</td>
-      <td>PNV J23244760+6111140</td>
+      <td></td>
       <td>0</td>
       <td>-</td>
       <td>-</td>
