--- a/novacas2021.html
+++ b/novacas2021.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Cas 2021</h5>      <p class="card-text">GCVS Name: V1405 Cas</p><p class="card-text">Discovery Name: --</p>      <p class="card-text">RA (2000): 23 24 47.73</p>      <p class="card-text">DEC (2000): +61 11 14.8</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Cas 2021</h5>      <p class="card-text">GCVS Name: V1405 Cas</p><p class="card-text">Discovery Name: PNV J23244760+6111140</p>      <p class="card-text">RA (2000): 23 24 47.74</p>      <p class="card-text">DEC (2000): +61 11 14.8</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
