--- a/novacir2018.html
+++ b/novacir2018.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Cir 2018</h5>      <p class="card-text">GCVS Name: FM Cir</p><p class="card-text">Discovery Name: PNV J13544700-5909080</p>      <p class="card-text">RA (2000): 13 53 27.60</p>      <p class="card-text">DEC (2000): -67 25 00.7</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Cir 2018</h5>      <p class="card-text">GCVS Name: FM Cir</p><p class="card-text">Discovery Name: PNV PNV J13532700-6725110</p>      <p class="card-text">RA (2000): 13 53 27.60</p>      <p class="card-text">DEC (2000): -67 25 00.7</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
