--- a/novasco2013.html
+++ b/novasco2013.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sco 2013</h5>      <p class="card-text">GCVS Name: 1533 Sco</p><p class="card-text">Discovery Name: ASASSN -17hx</p>      <p class="card-text">RA (2000): 17 50 19.27</p>      <p class="card-text">DEC (2000): -33 39 07.3</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sco 2013</h5>      <p class="card-text">GCVS Name: 1533 Sco</p><p class="card-text">Discovery Name: PNV J17335943-3606216</p>      <p class="card-text">RA (2000): 17 33 59.43</p>      <p class="card-text">DEC (2000): -36 06 21.6</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
