--- a/novaaql2015.html
+++ b/novaaql2015.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Aql 2015</h5>      <p class="card-text">GCVS Name: V1831 Aql</p><p class="card-text">Discovery Name: --</p>      <p class="card-text">RA (2000): 19 21 50.12</p>      <p class="card-text">DEC (2000): +15 09 24.8</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Aql 2015</h5>      <p class="card-text">GCVS Name: V1831 Aql</p><p class="card-text">Discovery Name: ASASSN-15qd</p>      <p class="card-text">RA (2000): 19 21 50.14</p>      <p class="card-text">DEC (2000): +15 09 25.3</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
