--- a/novacar2018.html
+++ b/novacar2018.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Car 2018</h5>      <p class="card-text">GCVS Name: V906 Car</p><p class="card-text">Discovery Name: --</p>      <p class="card-text">RA (2000): 10 36 13.71</p>      <p class="card-text">DEC (2000): -59 35 55.1</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Car 2018</h5>      <p class="card-text">GCVS Name: V906 Car</p><p class="card-text">Discovery Name: ASASSN-18fv</p>      <p class="card-text">RA (2000): 10 36 115.42</p>      <p class="card-text">DEC (2000): -59 35 54.0</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
