--- a/novacyg2019.html
+++ b/novacyg2019.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Cyg 2019</h5>      <p class="card-text">GCVS Name: V2891 Cyg</p><p class="card-text">Discovery Name: PNV J20214234+3103296</p>      <p class="card-text">RA (2000): 21 09 26.00</p>      <p class="card-text">DEC (2000): +48 10 51.9</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Cyg 2019</h5>      <p class="card-text">GCVS Name: V2891 Cyg</p><p class="card-text">Discovery Name: PGIR19brv</p>      <p class="card-text">RA (2000): 21 09 25.52</p>      <p class="card-text">DEC (2000): +48 10 51.9</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
