--- a/novamon2012.html
+++ b/novamon2012.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Mon 2012</h5>      <p class="card-text">GCVS Name: V959 Mon</p><p class="card-text">Discovery Name: ASASSN -15qd</p>      <p class="card-text">RA (2000): 06 39 38.74</p>      <p class="card-text">DEC (2000): +05 53 52.0</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Mon 2012</h5>      <p class="card-text">GCVS Name: V959 Mon</p><p class="card-text">Discovery Name: PNV J06393874+0553520</p>      <p class="card-text">RA (2000): 06 39 38.74</p>      <p class="card-text">DEC (2000): +05 53 52.0</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
