--- a/novamus2018.html
+++ b/novamus2018.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Mus 2018</h5>      <p class="card-text">GCVS Name: None</p><p class="card-text">Discovery Name: PNV J17381927-3725077</p>      <p class="card-text">RA (2000): 11 26 15.16</p>      <p class="card-text">DEC (2000): -65 31 23.3</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Mus 2018</h5>      <p class="card-text">GCVS Name: V357 Mus</p><p class="card-text">Discovery Name: PNV J11261220-6531086</p>      <p class="card-text">RA (2000): 11 26 15.16</p>      <p class="card-text">DEC (2000): -65 31 23.3</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
