--- a/novaori2019.html
+++ b/novaori2019.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Ori 2019</h5>      <p class="card-text">GCVS Name: None</p><p class="card-text">Discovery Name: TCP J18102829-2729590</p>      <p class="card-text">RA (2000): 06 09 57.40</p>      <p class="card-text">DEC (2000): +12 12 25.5</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Ori 2019</h5>      <p class="card-text">GCVS Name: V2860 Ori</p><p class="card-text">Discovery Name: PNV J06095740+121225</p>      <p class="card-text">RA (2000): 06 09 57.40</p>      <p class="card-text">DEC (2000): +12 12 25.5</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
