--- a/novasct2019.html
+++ b/novasct2019.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sct 2019</h5>      <p class="card-text">GCVS Name: V659 Sct</p><p class="card-text">Discovery Name: PNV J15384000-4744500</p>      <p class="card-text">RA (2000): 18 39 59.80</p>      <p class="card-text">DEC (2000): -10 25 41.9</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sct 2019</h5>      <p class="card-text">GCVS Name: V659 Sct</p><p class="card-text">Discovery Name: TCP J18395972-1025415</p>      <p class="card-text">RA (2000): 18 39 59.80</p>      <p class="card-text">DEC (2000): -10 25 41.9</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
