--- a/novasgr2014.html
+++ b/novasgr2014.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sgr 2014</h5>      <p class="card-text">GCVS Name: V5666 Sgr</p><p class="card-text">Discovery Name: TCP J18292290-1430460</p>      <p class="card-text">RA (2000): 18 25 08.60</p>      <p class="card-text">DEC (2000): -22 36 02.4</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sgr 2014</h5>      <p class="card-text">GCVS Name: V5666 Sgr</p><p class="card-text">Discovery Name: PNV J18250860-2236024</p>      <p class="card-text">RA (2000): 18 25 08.60</p>      <p class="card-text">DEC (2000): -22 36 02.4</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
