--- a/novasgr2021a.html
+++ b/novasgr2021a.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sgr 2021a</h5>      <p class="card-text">GCVS Name: --</p><p class="card-text">Discovery Name: TCP J00114297+6611190</p>      <p class="card-text">RA (2000): 18 49 05.22</p>      <p class="card-text">DEC (2000): -19 02 05.4</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sgr 2021a</h5>      <p class="card-text">GCVS Name: V6594 Sgr</p><p class="card-text">Discovery Name: ASASSN-21eh</p>      <p class="card-text">RA (2000): 18 49 05.05</p>      <p class="card-text">DEC (2000): -19 02 04.2</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
