--- a/novaoph2015.html
+++ b/novaoph2015.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Oph 2015</h5>      <p class="card-text">GCVS Name: V2944 Oph</p><p class="card-text">Discovery Name: ASASSN -16ig</p>      <p class="card-text">RA (2000): 17 29 13.50</p>      <p class="card-text">DEC (2000): -18 46 12.0</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Oph 2015</h5>      <p class="card-text">GCVS Name: V2944 Oph</p><p class="card-text">Discovery Name: PNV J17291350-1846120</p>      <p class="card-text">RA (2000): 17 29 13.50</p>      <p class="card-text">DEC (2000): -18 46 12.0</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
