--- a/novasct2018.html
+++ b/novasct2018.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sct 2018</h5>      <p class="card-text">GCVS Name: V613 Sct</p><p class="card-text">Discovery Name: TCP J04432130+4721280</p>      <p class="card-text">RA (2000): 18 29 22.90</p>      <p class="card-text">DEC (2000): -14 30 46.6</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova Sct 2018</h5>      <p class="card-text">GCVS Name: V613 Sct</p><p class="card-text">Discovery Name: TCP J18292290-1430460</p>      <p class="card-text">RA (2000): 18 29 22.90</p>      <p class="card-text">DEC (2000): -14 30 46.6</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
