--- a/novasmc2020.html
+++ b/novasmc2020.html
@@ -55,7 +55,7 @@
     </div>
   </nav>
 
-<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova SMC 2020</h5>      <p class="card-text">GCVS Name: --</p><p class="card-text">Discovery Name: TCP J04291884+4354232</p>      <p class="card-text">RA (2000): 00 48 45.00</p>      <p class="card-text">DEC (2000): -72 53 53.8</p>  </div>  </div></div><div class="col-sm-6">
+<!-- Page Content --><div class="container">  <div class="row">    <div class="col-lg-12 text-center">      <h1 class="mt-5">ARAS Novae Program</h1><br>  <div class="row"><div class="col-sm-6">  <div class="card">    <div class="card-body">      <h5 class="card-title">Nova SMC 2020</h5>      <p class="card-text">GCVS Name: --</p><p class="card-text">Discovery Name: AT 2020yeq</p>      <p class="card-text">RA (2000): 00 48 45.00</p>      <p class="card-text">DEC (2000): -72 53 53.8</p>  </div>  </div></div><div class="col-sm-6">
     <div class="card">
       <div class="card-body">
 
