--- a/novae.html
+++ b/novae.html
@@ -70,8 +70,8 @@
  <p class="card-text"></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 55
-</p><p class="card-text">Number of spectra: 2829
-</p><p class="card-text">Last update: 2021-06-25, 08:19</p>
+</p><p class="card-text">Number of spectra: 2828
+</p><p class="card-text">Last update: 2021-06-25, 08:35</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -84,7 +84,7 @@
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Stars of special interest</h5>
-<p class="card-text" style="margin-bottom:2.358cm;">Novae in outburst: CN Cha (SyN), Nova Cas 2021</p>
+<p class="card-text" style="margin-bottom:2.358cm;">Novae in outburst: CN Cha (SyN)</p>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
@@ -715,7 +715,7 @@
       <td>+16 53 39.6</td>
       <td>V1674 Her</td>
       <td>TCP J18573095+1653396</td>
-      <td>63</td>
+      <td>62</td>
       <td>2021-06-12</td>
       <td>2021-06-25</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-25 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
