--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text"></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 55
-</p><p class="card-text">Number of spectra: 2832
-</p><p class="card-text">Last update: 2021-07-01, 13:57</p>
+<p class="card-text">Number of stars: 56
+</p><p class="card-text">Number of spectra: 2833
+</p><p class="card-text">Last update: 2021-07-02, 07:28</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -719,6 +719,17 @@
       <td>2021-06-12</td>
       <td>2021-06-29</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-29 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novasco2021b.html">Nova Sco 2021b</a></td>
+      <td>17 39 44.729</td>
+      <td>-36 16 40.19</td>
+      <td></td>
+      <td>ASASSN-21lk</td>
+      <td>1</td>
+      <td>2021-06-30</td>
+      <td>2021-06-30</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-06-30 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
