Update Novae Section

--- a/novae.html
+++ b/novae.html
@@ -67,11 +67,11 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
- <p class="card-text">Details on stars:   <a href="asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
+ <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 56
 </p><p class="card-text">Number of spectra: 2890
-</p><p class="card-text">Last update: 2021-07-09, 07:15</p>
+</p><p class="card-text">Last update: 2021-07-09, 07:23</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
