--- a/cicyg.html
+++ b/cicyg.html
@@ -3705,7 +3705,7 @@
       <td>2010-09-15</td>
       <td>20:30</td>
       <td>55454.854</td>
-      <td>E. Sarrazin</td>
+      <td>ESA</td>
       <td>OCT-FR</td>
       <td>44</td>
       <td></td>
@@ -3750,7 +3750,7 @@
       <td>2010-09-19</td>
       <td>19:30</td>
       <td>55458.812</td>
-      <td>E. Sarrazin</td>
+      <td>ESA</td>
       <td>OCT-FR</td>
       <td>45</td>
       <td></td>
