--- a/novae.html
+++ b/novae.html
@@ -731,6 +731,25 @@
       <td>2021-07-08</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
+    <tr>
+      <td><a href="novavul2021.html">Nova VUl 2021</a></td>
+      <td>20 21 07.7</td>
+      <td>+29 14 09.3</td>
+      <td></td>
+      <td>TCP J20210770+2914093</td>
+      <td>1</td>
+      <td>2021-07-17</td>
+      <td>2021-07-17</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+
+
+
+
+
+
+
+
   </tbody>
 </table><br><br>
       </div>
