--- a/novae.html
+++ b/novae.html
@@ -666,17 +666,6 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2017-10-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td>T Pyx</td>
-      <td>09 04 41.51</td>
-      <td>-32 22 47.5</td>
-      <td>T Pyx</td>
-      <td></td>
-      <td>0</td>
-      <td>-</td>
-      <td>-</td>
-      <td>-</td>
-    </tr>
-    <tr>
       <td><a href="v3890sgr.html">V3890 Sgr</a></td>
       <td>18 30 43.29</td>
       <td>-24 01 08.9</td>
@@ -732,7 +721,7 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-07-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td><a href="novavul2021.html">Nova VUl 2021</a></td>
+      <td><a href="novavul2021.html">Nova Vul 2021</a></td>
       <td>20 21 07.7</td>
       <td>+29 14 09.3</td>
       <td></td>
