--- a/arpav.html
+++ b/arpav.html
@@ -89,7 +89,13 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/arpav.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
+<div class="card-body">
+<h5 class="card-title">symbiotic outburst (08-2021)</h5></div>
+</div>
+<br>
+
+<a href="archives/arpav.zip" class="btn btn-secondary">Download all spectra as *.zip file (0.0 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
