--- a/arpav.html
+++ b/arpav.html
@@ -91,7 +91,7 @@
 
 <br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
 <div class="card-body">
-<h5 class="card-title">symbiotic outburst (08-2021)</h5></div>
+<h5 class="card-title">Symbiotic outburst (08-2021)</h5></div>
 </div>
 <br>
 
