--- a/novae.html
+++ b/novae.html
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 57
 </p><p class="card-text">Number of spectra: 3226
-</p><p class="card-text">Last update: 2021-08-16, 14:58</p>
+</p><p class="card-text">Last update: 2021-08-16, 15:17</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -732,7 +732,7 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-08-06 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
     <tr>
-      <td><a href="rsoph.html">Recurrent Nova 2021</a></td>
+      <td><a href="rsoph.html">RS Oph</a></td>
       <td>17 50 13.1</td>
       <td>-06 42 28.5</td>
       <td>RS Oph</td>
