--- a/observers.html
+++ b/observers.html
@@ -316,6 +316,13 @@
       <td></td>
     </tr>
     <tr>
+      <td>JBD</td>
+      <td>Jean-Baptiste Desrosiers</td>
+      <td>Canada</td>
+      <td ></td>
+      <td><a href="http://omsj.info/">http://omsj.info/</a></td>
+    </tr>
+    <tr>
       <td>JCO</td>
       <td>John P. Coffins</td>
       <td>United Kingdom</td>
