--- a/observers.html
+++ b/observers.html
@@ -323,6 +323,13 @@
       <td><a href="http://omsj.info/">http://omsj.info/</a></td>
     </tr>
     <tr>
+      <td>JLL</td>
+      <td>Jean-Loup Lemaire</td>
+      <td>France</td>
+      <td ></td>
+      <td></td>
+    </tr>
+    <tr>
       <td>JCO</td>
       <td>John P. Coffins</td>
       <td>United Kingdom</td>
