--- a/observers.html
+++ b/observers.html
@@ -191,6 +191,13 @@
       <td></td>
     </tr>
     <tr>
+      <td>DDA</td>
+      <td>Dave Doctor</td>
+      <td >USA</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
       <td>DBO</td>
       <td>David Boyd</td>
       <td >United Kingdom</td>
