--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 71
-</p><p class="card-text">Number of spectra: 6446
-</p><p class="card-text">Last update: 2021-08-26, 07:51</p>
+<p class="card-text">Number of stars: 72
+</p><p class="card-text">Number of spectra: 6448
+</p><p class="card-text">Last update: 2021-08-26, 10:29</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -981,6 +981,18 @@
       <td>30</td>
       <td>2</td>
       <td>2.0</td>
+    </tr>
+    <tr>
+      <td><a href="ss73141.html">SS73 141</a></td>
+      <td>18 12 11.34</td>
+      <td>-33 10 42.49</td>
+      <td>2</td>
+      <td>2021-08-25</td>
+      <td>2021-08-26</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-08-26 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>8</td>
+      <td>-</td>
+      <td>1.0</td>
     </tr>
   </tbody>
 </table><br><br>
