--- a/arpav.html
+++ b/arpav.html
@@ -66,12 +66,11 @@
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">AR Pav</h5>
-      <p class="card-text">RA (2000): 18 20 27.8818</p>
-  <p class="card-text">DEC (2000):  -66 04 42.931</p>
-  <p class="card-text">V (mag): 9.7 - 14.4</p>
-  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/ar-pav/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
-      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=AR+Pav&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
-
+      <p class="card-text">RA (2000): 18 20 27.88</p>
+  <p class="card-text">DEC (2000):  -66 04 42.93</p>
+  <p class="card-text">V (mag): 10.1 - 11.2</p>
+  <a href="http://astronomy.science.upjs.sk/symbiotics/galactic-symbiotic-stars/confirmed-galactic-symbiotic-stars/v399-pav/" class="btn btn-primary">New Online Database of Symbiotic Variables</a>
+      <a href="http://simbad.harvard.edu/simbad/sim-id?Ident=V399+Pav&NbIdent=1&Radius=2&Radius.unit=arcmin&submit=submit+id" class="btn btn-secondary">SIMBAD</a>
   </div>
   </div>
 </div><div class="col-sm-6">
