--- a/dwarfnovae.html
+++ b/dwarfnovae.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database: Novae</title>
+  <title>ARAS Spectral Database: Dwarf Novae</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h1 class="mt-5">ARAS Dwarf Novaem</h1>
+        <h1 class="mt-5">ARAS Dwarf Novae</h1>
         <br>
 		<div class="row">
 
@@ -114,7 +114,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><a href="sscyg.html">SS Cyg/a></td>
+      <td><a href="sscyg.html">SS Cyg</a></td>
       <td>21 42 42.80</td>
       <td>+43 35 09.86</td>
       <td>SS Cyg</td>
