--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 70
-</p><p class="card-text">Number of spectra: 6557
-</p><p class="card-text">Last update: 2021-09-16, 15:37</p>
+<p class="card-text">Number of stars: 71
+</p><p class="card-text">Number of spectra: 6560
+</p><p class="card-text">Last update: 2021-09-16, 19:22</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -130,6 +130,18 @@
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td><a href="7cet.html">7 Cet</a></td>
+      <td>00 14 38.42</td>
+      <td>-18 55 58.31</td>
+      <td>1</td>
+      <td>2021-09-16</td>
+      <td>2021-09-16</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-16 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>2</td>
+      <td>2</td>
+    </tr>
     <tr>
       <td><a href="agdra.html">AG Dra</a></td>
       <td>16 01 41.01</td>
@@ -554,10 +566,10 @@
       <td><a href="rsoph.html">RS Oph</a></td>
       <td>17 50 13.16</td>
       <td>-06 42 28.48</td>
-      <td>368</td>
+      <td>370</td>
       <td>2011-03-23</td>
-      <td>2021-09-13</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2021-09-15</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-09-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>0</td>
       <td>0</td>
