--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -97,7 +97,7 @@
 <br>
 
 <br>
-<!-- <h3>Confirmed symbiotics</h3> -->
+<!-- <h3>Dwarf Novae</h3> -->
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
