--- a/dwarf_novae.html
+++ b/dwarf_novae.html
@@ -68,8 +68,8 @@
     <div class="card">
       <div class="card-body">
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 57
-</p><p class="card-text">Number of spectra: 3407
+<p class="card-text">Number of stars: 1
+</p><p class="card-text">Number of spectra: 1
 </p><p class="card-text">Last update: 2021-09-08, 17:29</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
@@ -82,7 +82,7 @@
   <div class="col-sm-6">
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title">Stars of special interest</h5>
+        <h5 class="card-title">Outbursts and Monitoring</h5>
 		<br><br>
 		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
